--- a/DDAYGO/ViewController/My/Footmark/Cell/Base.lproj/FootprintCollectionViewCell.xib
+++ b/DDAYGO/ViewController/My/Footmark/Cell/Base.lproj/FootprintCollectionViewCell.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -40,25 +40,25 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阿芙专卖店" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3J-vH-jhp">
                                 <rect key="frame" x="8" y="4" width="94" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RMB:9999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zL5-NI-56j">
-                                <rect key="frame" x="8" y="25" width="49" height="10"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <rect key="frame" x="8" y="25" width="60" height="10"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_cp" translatesAutoresizingMaskIntoConstraints="NO" id="euM-82-Nmy">
-                                <rect key="frame" x="60" y="25" width="10" height="10"/>
+                                <rect key="frame" x="74" y="25" width="10" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="10" id="VWr-lq-yPm"/>
                                     <constraint firstAttribute="height" constant="10" id="Z1C-yZ-X5W"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzT-YR-bO9">
-                                <rect key="frame" x="71" y="25" width="34" height="10"/>
+                                <rect key="frame" x="84" y="25" width="25" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="BDB-V2-lwH"/>
                                 </constraints>
@@ -70,13 +70,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="euM-82-Nmy" secondAttribute="bottom" constant="6" id="3yk-lc-VuR"/>
-                            <constraint firstItem="tzT-YR-bO9" firstAttribute="leading" secondItem="euM-82-Nmy" secondAttribute="trailing" constant="1" id="5xp-Gm-SMF"/>
+                            <constraint firstItem="tzT-YR-bO9" firstAttribute="leading" secondItem="euM-82-Nmy" secondAttribute="trailing" id="5xp-Gm-SMF"/>
                             <constraint firstItem="zL5-NI-56j" firstAttribute="leading" secondItem="D3J-vH-jhp" secondAttribute="leading" id="BsD-oa-qeZ"/>
                             <constraint firstItem="D3J-vH-jhp" firstAttribute="top" secondItem="Hk3-b8-2zb" secondAttribute="top" constant="4" id="F6f-fw-Sgs"/>
                             <constraint firstItem="D3J-vH-jhp" firstAttribute="leading" secondItem="Hk3-b8-2zb" secondAttribute="leading" constant="8" id="KHE-k7-QyM"/>
-                            <constraint firstAttribute="trailing" secondItem="tzT-YR-bO9" secondAttribute="trailing" constant="5" id="KgP-Oo-m0g"/>
-                            <constraint firstAttribute="trailing" secondItem="zL5-NI-56j" secondAttribute="trailing" constant="53" id="M9j-aF-gm8"/>
-                            <constraint firstItem="euM-82-Nmy" firstAttribute="leading" secondItem="zL5-NI-56j" secondAttribute="trailing" constant="3" id="PaW-sp-7w5"/>
+                            <constraint firstAttribute="trailing" secondItem="tzT-YR-bO9" secondAttribute="trailing" constant="1" id="KgP-Oo-m0g"/>
+                            <constraint firstAttribute="trailing" secondItem="zL5-NI-56j" secondAttribute="trailing" constant="42" id="M9j-aF-gm8"/>
+                            <constraint firstItem="euM-82-Nmy" firstAttribute="leading" secondItem="zL5-NI-56j" secondAttribute="trailing" constant="6" id="PaW-sp-7w5"/>
                             <constraint firstAttribute="trailing" secondItem="D3J-vH-jhp" secondAttribute="trailing" constant="8" id="QJf-OW-nyC"/>
                             <constraint firstAttribute="bottom" secondItem="zL5-NI-56j" secondAttribute="bottom" constant="6" id="QJh-A4-9wW"/>
                             <constraint firstItem="zL5-NI-56j" firstAttribute="top" secondItem="D3J-vH-jhp" secondAttribute="bottom" constant="4" id="Rsc-A9-8f7"/>
