--- a/DDAYGO/ViewController/Class/ClassHomepage/ClassificationViewController.xib
+++ b/DDAYGO/ViewController/Class/ClassHomepage/ClassificationViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,15 +22,18 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="naL-vV-Jzv">
-                    <rect key="frame" x="0.0" y="0.0" width="118.5" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="119" height="667"/>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="119" id="dNx-hH-qY4"/>
+                    </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="iEo-av-Bnz"/>
                         <outlet property="delegate" destination="-1" id="0Gd-dI-ohS"/>
                     </connections>
                 </tableView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bCm-bp-2nX">
-                    <rect key="frame" x="119" y="64" width="256" height="603"/>
+                    <rect key="frame" x="119" y="0.0" width="256" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="N7F-v4-UJU"/>
@@ -41,15 +43,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="naL-vV-Jzv" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.316" id="CPd-Lq-f0W"/>
-                <constraint firstAttribute="bottom" secondItem="bCm-bp-2nX" secondAttribute="bottom" id="Pl7-uy-J6v"/>
-                <constraint firstItem="bCm-bp-2nX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Uya-7S-eFw"/>
-                <constraint firstAttribute="trailing" secondItem="bCm-bp-2nX" secondAttribute="trailing" id="VTW-xm-ycM"/>
-                <constraint firstItem="bCm-bp-2nX" firstAttribute="leading" secondItem="naL-vV-Jzv" secondAttribute="trailing" id="hQa-fk-Xj3"/>
-                <constraint firstItem="naL-vV-Jzv" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hqZ-YM-SZr"/>
-                <constraint firstAttribute="bottom" secondItem="naL-vV-Jzv" secondAttribute="bottom" id="pZR-q1-91o"/>
-                <constraint firstItem="naL-vV-Jzv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rHd-a9-4Oo"/>
+                <constraint firstItem="naL-vV-Jzv" firstAttribute="baseline" secondItem="bCm-bp-2nX" secondAttribute="baseline" id="14l-3t-geL"/>
+                <constraint firstItem="naL-vV-Jzv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="XFU-cc-pV0"/>
+                <constraint firstItem="naL-vV-Jzv" firstAttribute="top" secondItem="bCm-bp-2nX" secondAttribute="top" id="cDp-Fj-KRU"/>
+                <constraint firstItem="bCm-bp-2nX" firstAttribute="leading" secondItem="naL-vV-Jzv" secondAttribute="trailing" id="fH5-1L-XK8"/>
+                <constraint firstAttribute="bottom" secondItem="naL-vV-Jzv" secondAttribute="bottom" id="icn-v1-Byb"/>
+                <constraint firstAttribute="trailing" secondItem="bCm-bp-2nX" secondAttribute="trailing" id="jRg-o3-cvf"/>
+                <constraint firstItem="naL-vV-Jzv" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="rQ5-7M-0wY"/>
             </constraints>
+            <point key="canvasLocation" x="34.5" y="54.5"/>
         </view>
     </objects>
 </document>
