优化订单界面
优化订单界面

--- a/DDAYGO/ViewController/Logregister/LogregisterHomePage/LogregisterController.xib
+++ b/DDAYGO/ViewController/Logregister/LogregisterHomePage/LogregisterController.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,11 +21,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0nb-gI-0kd">
-                    <rect key="frame" x="16" y="427" width="343" height="40"/>
+                    <rect key="frame" x="16" y="313.5" width="343" height="40"/>
                     <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="0.64544092470000003" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="Rp8-pR-1G7"/>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="iSY-cm-qRm"/>
+                        <constraint firstAttribute="height" constant="40" id="nXn-KX-fNV"/>
                     </constraints>
                     <state key="normal" title="登录">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -39,10 +39,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhN-3N-4wk">
-                    <rect key="frame" x="16" y="494" width="343" height="40"/>
+                    <rect key="frame" x="16" y="398.5" width="343" height="40"/>
                     <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="0.64544092470000003" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="6V0-zO-qcM"/>
+                        <constraint firstAttribute="height" constant="40" id="N5V-hh-sxu"/>
                     </constraints>
                     <state key="normal" title="新用户注册">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -57,34 +57,32 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_login_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Ciz-WC-OaP">
-                    <rect key="frame" x="122" y="120" width="130" height="130"/>
+                    <rect key="frame" x="122" y="81" width="130" height="130"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="130" id="dNz-aO-lKQ"/>
-                        <constraint firstAttribute="width" constant="130" id="x8L-N7-mfg"/>
+                        <constraint firstAttribute="width" constant="130" id="ZeG-hp-cDS"/>
+                        <constraint firstAttribute="height" constant="130" id="aLh-zj-yT2"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_icue" translatesAutoresizingMaskIntoConstraints="NO" id="9Jl-Hy-pY5">
-                    <rect key="frame" x="65" y="590" width="35" height="35"/>
+                    <rect key="frame" x="67" y="498.5" width="35" height="35"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="35" id="Acz-Vt-VEQ"/>
-                        <constraint firstAttribute="height" constant="35" id="Teh-EV-0XS"/>
+                        <constraint firstAttribute="width" constant="35" id="89Y-Cm-et0"/>
+                        <constraint firstAttribute="height" constant="35" id="Ga6-T9-yBv"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICUE账户快速" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7d-Dd-0Lg">
-                    <rect key="frame" x="108" y="590" width="101" height="35"/>
+                    <rect key="frame" x="110" y="498.5" width="101" height="35"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="101" id="HEF-s8-wkO"/>
-                        <constraint firstAttribute="height" constant="35" id="qRw-NC-MTF"/>
+                        <constraint firstAttribute="width" constant="101" id="LrX-rl-jg3"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYj-Ab-JMS">
-                    <rect key="frame" x="196" y="590" width="46" height="35"/>
+                    <rect key="frame" x="200" y="498.5" width="46" height="35"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="46" id="dkl-rl-FLQ"/>
-                        <constraint firstAttribute="height" constant="35" id="nbX-OX-QQg"/>
+                        <constraint firstAttribute="width" constant="46" id="1nl-OJ-9wE"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <state key="normal" title="登录">
@@ -98,23 +96,22 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="qhN-3N-4wk" firstAttribute="top" secondItem="0nb-gI-0kd" secondAttribute="bottom" constant="27" id="29R-gF-msX"/>
-                <constraint firstItem="9Jl-Hy-pY5" firstAttribute="top" secondItem="qhN-3N-4wk" secondAttribute="bottom" constant="56" id="6hr-Qb-MqK"/>
-                <constraint firstAttribute="bottom" secondItem="XYj-Ab-JMS" secondAttribute="bottom" constant="42" id="Bo9-O3-slb"/>
-                <constraint firstItem="9Jl-Hy-pY5" firstAttribute="leading" secondItem="8KN-Oo-tak" secondAttribute="leading" constant="65" id="DIK-6Q-bUc"/>
-                <constraint firstItem="Z7d-Dd-0Lg" firstAttribute="leading" secondItem="9Jl-Hy-pY5" secondAttribute="trailing" constant="8" id="IeH-hU-ecL"/>
-                <constraint firstItem="0nb-gI-0kd" firstAttribute="trailing" secondItem="qhN-3N-4wk" secondAttribute="trailing" id="OEW-5K-pnu"/>
-                <constraint firstItem="0nb-gI-0kd" firstAttribute="leading" secondItem="qhN-3N-4wk" secondAttribute="leading" id="P5M-Y6-3G0"/>
-                <constraint firstItem="XYj-Ab-JMS" firstAttribute="leading" secondItem="9Jl-Hy-pY5" secondAttribute="trailing" constant="96" id="QTa-Bx-O5l"/>
-                <constraint firstAttribute="trailing" secondItem="0nb-gI-0kd" secondAttribute="trailing" constant="16" id="TsR-I6-yty"/>
-                <constraint firstItem="Ciz-WC-OaP" firstAttribute="top" secondItem="8KN-Oo-tak" secondAttribute="top" constant="120" id="bga-m9-9Zp"/>
-                <constraint firstItem="Z7d-Dd-0Lg" firstAttribute="top" secondItem="9Jl-Hy-pY5" secondAttribute="top" id="hVJ-oh-SKm"/>
-                <constraint firstItem="Ciz-WC-OaP" firstAttribute="centerX" secondItem="0nb-gI-0kd" secondAttribute="centerX" id="heT-xP-hIw"/>
-                <constraint firstAttribute="bottom" secondItem="qhN-3N-4wk" secondAttribute="bottom" constant="133" id="k6b-vk-pFh"/>
-                <constraint firstItem="Ciz-WC-OaP" firstAttribute="centerX" secondItem="8KN-Oo-tak" secondAttribute="centerX" id="kXk-lX-59E"/>
-                <constraint firstItem="0nb-gI-0kd" firstAttribute="leading" secondItem="8KN-Oo-tak" secondAttribute="leading" constant="16" id="oEf-aj-nwi"/>
-                <constraint firstAttribute="bottom" secondItem="9Jl-Hy-pY5" secondAttribute="bottom" constant="42" id="oSK-0N-t1b"/>
-                <constraint firstItem="XYj-Ab-JMS" firstAttribute="top" secondItem="qhN-3N-4wk" secondAttribute="bottom" constant="56" id="yes-Zv-CU2"/>
+                <constraint firstItem="9Jl-Hy-pY5" firstAttribute="bottom" secondItem="Z7d-Dd-0Lg" secondAttribute="bottom" id="0jM-No-sXf"/>
+                <constraint firstItem="9Jl-Hy-pY5" firstAttribute="top" secondItem="Z7d-Dd-0Lg" secondAttribute="top" id="B4l-Qw-oPl"/>
+                <constraint firstItem="0nb-gI-0kd" firstAttribute="trailing" secondItem="8KN-Oo-tak" secondAttribute="trailingMargin" id="Dwq-fu-vaI"/>
+                <constraint firstItem="qhN-3N-4wk" firstAttribute="top" secondItem="0nb-gI-0kd" secondAttribute="bottom" constant="45" id="FmZ-yP-rQW"/>
+                <constraint firstItem="Ciz-WC-OaP" firstAttribute="centerX" secondItem="0nb-gI-0kd" secondAttribute="centerX" id="LI0-T3-l5b"/>
+                <constraint firstItem="Z7d-Dd-0Lg" firstAttribute="leading" secondItem="9Jl-Hy-pY5" secondAttribute="trailing" constant="8" symbolic="YES" id="SO8-kx-tZJ"/>
+                <constraint firstItem="Ciz-WC-OaP" firstAttribute="top" secondItem="8KN-Oo-tak" secondAttribute="top" constant="81" id="T0o-cn-LSA"/>
+                <constraint firstItem="Z7d-Dd-0Lg" firstAttribute="bottom" secondItem="XYj-Ab-JMS" secondAttribute="bottom" id="VLb-I4-RgW"/>
+                <constraint firstItem="0nb-gI-0kd" firstAttribute="trailing" secondItem="qhN-3N-4wk" secondAttribute="trailing" id="a5d-mj-rW3"/>
+                <constraint firstItem="9Jl-Hy-pY5" firstAttribute="top" secondItem="qhN-3N-4wk" secondAttribute="bottom" constant="60" id="fWa-8C-PA3"/>
+                <constraint firstItem="0nb-gI-0kd" firstAttribute="centerY" secondItem="8KN-Oo-tak" secondAttribute="centerY" id="kbr-cU-74v"/>
+                <constraint firstItem="9Jl-Hy-pY5" firstAttribute="leading" secondItem="8KN-Oo-tak" secondAttribute="leading" constant="67" id="l2o-LY-th1"/>
+                <constraint firstItem="0nb-gI-0kd" firstAttribute="leading" secondItem="8KN-Oo-tak" secondAttribute="leadingMargin" id="lDa-T7-dxK"/>
+                <constraint firstItem="0nb-gI-0kd" firstAttribute="leading" secondItem="qhN-3N-4wk" secondAttribute="leading" id="lzW-zp-pIt"/>
+                <constraint firstItem="XYj-Ab-JMS" firstAttribute="leading" secondItem="9Jl-Hy-pY5" secondAttribute="trailing" constant="98" id="rgk-MK-Agl"/>
+                <constraint firstItem="Z7d-Dd-0Lg" firstAttribute="top" secondItem="XYj-Ab-JMS" secondAttribute="top" id="yRe-zp-Q2Z"/>
             </constraints>
             <point key="canvasLocation" x="32.5" y="53.5"/>
         </view>
